--- a/vue3-quasar-app/package.json
+++ b/vue3-quasar-app/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "postcss": "^8.4.14",
     "prettier": "^2.8.8",
+    "sass": "^1.69.5",
     "unplugin-vue-router": "^0.7.0",
     "vite-plugin-vue-layouts": "^0.8.0"
   },
